force-app/main/default/objects/PWChrono_Salary_Assignment__c/PWChrono_Salary_Assignment__c.object-meta.xml
<CustomObject>
    <label>Salary Assignment</label>
    <nameField>
        <displayFormat>ASGN-{00000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salary Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>