force-app/main/default/objects/PWChrono_Salary_Assignment__c/fields/Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Change_Reason__c</fullName>
    <label>Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Offer</fullName>
            </value>
            <value>
                <fullName>Annual Increment</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>