force-app/main/default/objects/PWChrono_Salary_Assignment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >Canonical employee Contact for this effective-dated salary assignment.</description>
    <label>Employee Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Salary Assignments</relationshipLabel>
    <relationshipName>PWChrono_Salary_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>