force-app/main/default/objects/PWChrono_Salary_Assignment__c/fields/Previous_Salary__c.field-meta.xml
<CustomField>
    <fullName>Previous_Salary__c</fullName>
    <label>Previous Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>