force-app/main/default/objects/PWChrono_Salary_Assignment__c/fields/Salary_Structure__c.field-meta.xml
<CustomField>
    <fullName>Salary_Structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salary Structure</label>
    <referenceTo>PWChrono_Salary_Structure__c</referenceTo>
    <relationshipLabel>Salary Assignments</relationshipLabel>
    <relationshipName>PWChrono_Salary_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>